Fix text/icon overlap in tracked topics list

--- a/skin/classic/tree.css
+++ b/skin/classic/tree.css
@@ -10,7 +10,7 @@
 
 #gamefox-tracked-rows::-moz-tree-cell
 {
-    padding-left: 6px;
+    padding-left: 10px;
 }
 
 /* Tags */
